--- a/tango/templates/register/done.html
+++ b/tango/templates/register/done.html
@@ -4,16 +4,10 @@
 
 
 {% block content %}
-    <section>
+    <section class="container-skinny">
         <h1>Thank you</h1>
         <p>
             We can only win elections and make a difference with the help of everyone who supports Labour, so thank you.
         </p>
-        <h2>Verification</h2>
-    <p>
-        You should now receive an email with a link requiring you to confirm your account.
-    </p>
     </section>
-
-
 {% endblock %}
