--- a/tango/templates/pages/data.html
+++ b/tango/templates/pages/data.html
@@ -2,24 +2,17 @@
 {% block title %}Data Protection{% endblock %}
 
 {% block sidebar %}
-    <section>
-        <h5>About</h5>
-        <nav>
-            <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Page...</a></li>
-            </ul>
-        </nav>
-    </section>
-    <section>
-        <h5>Legal</h5>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('home.page', title='data') }}">Data Protection</a></li>
-                <li><a href="#">Data removal request form</a></li>
-            </ul>
-        </nav>
-    </section>
+    <nav class="menu-padding">
+        <ul class="sidebar-menu">
+            <li class="group-title">About</li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Page...</a></li>
+            <li class="divider"></li>
+            <li class="group-title">Legal</li>
+            <li><a href="{{ url_for('home.page', title='data') }}">Data Protection</a></li>
+            <li><a href="#">Removal request</a></li>
+        </ul>
+    </nav>
 {% endblock %}
 
 
