--- a/tango/templates/emails/verify_code.html
+++ b/tango/templates/emails/verify_code.html
@@ -1,12 +1,7 @@
 {% extends 'layouts/email.html' %}
+{% import 'macros/email.html' as elem %}
 {% block content %}
-    <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-        Hi {{ name or 'there' }},
-    </p>
-    <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-        Here is your one-time verification code:
-    </p>
-    <p style="font-family: sans-serif; font-size: 32px; font-weight: bold; margin: 0; Margin-bottom: 15px;">
-        {{ code }}
-    </p>
+    {{ elem.p("Hi %s," % name or 'there') }}
+    {{ elem.p("Here is your one-time verification code:") }}
+    {{ elem.header(code) }}
 {% endblock %}
