--- a/tango/templates/layouts/email.html
+++ b/tango/templates/layouts/email.html
@@ -126,8 +126,8 @@
               <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">Company Inc, 3 Abbey Road, San Francisco CA 94102</span>
-                    <br> Don't like these emails? <a href="http://www.committeeroom.co.uk/email/unsubscribe?e={{ email }}" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Unsubscribe</a>.
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">Committee Room</span>
+                    <br> If you want to stop these emails <a href="http://www.committeeroom.co.uk/email/unsubscribe?e={{ email }}" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Unsubscribe</a>.
                   </td>
                 </tr>
                 <tr>
